<resources>

    <string name="app_name">HerbarioAdminUQ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!-- Variables del menu administrador layout nav_header_main-->
    <string name="nombre_herbario">HERBARIO UNIQUINDIO</string>
    <string name="rol_herbario">Administrador</string>


    <!-- Variables del menu administrador layout activity_main_drawer-->
    <string name="opc_lista_plantas">LISTA DE PLANTAS</string>
    <string name="opc_listar_pendientes">LISTAR PLANTAS PENDIENTES</string>
    <string name="opc_gestionar_recolectores">GESTIONAR RECOLECTORES</string>
    <string name="opc_datos_cuenta">DATOS DE LA CUENTA</string>
    <string name="opc_salir">SALIR</string>


    <!-- fragmento en blanco -->

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Variables del fragmento iniciar sesion-->

    <string name="inicioSesion">INICIAR SESIÓN</string>
    <string name="usuario">Usuario</string>
    <string name="correo">Correo</string>
    <string name="claveIniciarSesion">Contraseña</string>
    <string name="botonAceptar">ACEPTAR</string>

    <!-- Variables del fragmento actualizar contraseña-->

    <string name="actualizarClave">ACTUALIZAR CLAVE</string>
    <string name="tituloActualizarClave">ACTUALIZAR CONTRASEÑA</string>

    <!-- fragmento principal-->
    <string name="mensajePrincipal">HERBARIO UNIQUINDIO</string>
    <string name="mensajePrincipal1">SESION DE ADMINISTRADOR</string>
    <string name="mensajePrincipal2">NOMBRE ADMINISTRADOR</string>


    <string name="nombre_app">Pokemon</string>
    <string name="agregar_pokemon">Agregar pokemon</string>
    <string name="modificar_posicion">Modificar posición</string>
    <string name="eliminar_pokemon">Eliminar pokemon</string>
    <string name="lenguaje_pokemon">Es</string>
    <string name="texto_detalle_de_pokemon">Es______________________________-</string>



</resources>
