<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragment.FragmentIniciarSesion">

    <!-- TODO: Update blank fragment layout -->

    <TextView

            android:Text= "@string/inicioSesion"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="123dp"
            android:layout_marginTop="24dp"/>

    <TextView
            android:Text= "@string/usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="27dp"
            android:layout_alignParentTop="true"
            android:id="@+id/textUsuario"
            android:layout_marginTop="80dp"/>


    <EditText

            android:text="@string/correo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress|textPersonName"
            android:ems="10"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="46dp"
            android:id="@+id/editCorreoElectronico"
            android:layout_marginTop="83dp"/>

    <TextView
            android:text="@string/clave"
            android:layout_width="210dp"
            android:layout_height="44dp"
            android:layout_alignParentTop="true"
            android:layout_alignEnd="@+id/textUsuario"
            android:id="@+id/textContraseña"
            android:layout_marginTop="154dp" android:layout_marginEnd="-310dp"/>


    <Button
            android:text="ACEPTAR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textIniciarSesion"
            android:id="@+id/buttonIniciarSesion" android:layout_marginTop="213dp"
            android:layout_alignParentTop="true"/>
    <TextView
            android:text="Correo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_alignParentStart="true"
            android:layout_below="@+id/textUsuario" android:layout_marginStart="13dp" android:id="@+id/textView2"/>
    <TextView
            android:text="Contraseña"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_alignParentTop="true" android:id="@+id/textView3"
            android:layout_marginTop="162dp" android:layout_alignStart="@+id/textView2"/>
</RelativeLayout>